--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,5 +1,58 @@
-flask>=0.12
-nltk>=3.3
-numpy>=1.10
-pandas>=0.20
-textblob>=0.10
+bert-extractive-summarizer==0.6.1
+blis==0.2.4
+catalogue==1.0.0
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+cymem==2.0.5
+decorator==4.4.2
+en-core-web-sm==2.1.0
+filelock==3.0.12
+flashtext==2.7
+Flask==1.1.2
+future==0.18.2
+gensim==3.8.3
+idna==2.10
+install==1.3.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==1.0.0
+jsonschema==2.6.0
+MarkupSafe==1.1.1
+murmurhash==1.0.5
+networkx==2.5
+nltk==3.5
+numpy==1.19.5
+packaging==20.8
+pandas==1.2.0
+pke==1.8.1
+plac==0.9.6
+preshed==2.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.5
+pywsd==1.2.4
+regex==2020.11.13
+requests==2.25.1
+sacremoses==0.0.43
+scikit-learn==0.24.0
+scipy==1.6.0
+six==1.15.0
+sklearn==0.0
+smart-open==4.1.0
+spacy==2.1.3
+srsly==1.0.5
+textblob==0.15.3
+thinc==7.0.8
+threadpoolctl==2.1.0
+tokenizers==0.9.4
+toml==0.10.2
+torch==1.7.1
+tqdm==4.56.0
+transformers==4.2.1
+typing-extensions==3.7.4.3
+Unidecode==1.1.2
+urllib3==1.26.2
+wasabi==0.8.0
+Werkzeug==1.0.1
+wn==0.0.23
